fixed menu overlapping admin dropdown
reduced the z-index of the horizontal navigation menu so that it doesn't overlap the admin menu dropdown

--- a/Skins/UniversityCollege/skin.css
+++ b/Skins/UniversityCollege/skin.css
@@ -591,6 +591,7 @@ width: 440px;
 }
 #navigation .RadMenu {
   float: none;
+  z-index: 100 !important;
 }
 #navigation .RadMenu_Default ul {
   zoom: 1;
